<resources>
    <string name="app_name">OpenFoodFactESGI</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">mot de passe</string>
    <string name="forget_password_btn">Mot de passe oublié ?</string>
    <string name="create_account_btn">Pas de compte ?</string>
    <string name="website">https://world.openbeautyfacts.org/</string>
    <string name="success_title">You successfully scanned:</string>
    <string name="back_to_scanner">Back to scanner</string>

    <string name="logo_success">logo_success</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo_rank">logo_rank</string>
    <string name="confirmez_votre_mot_de_pass">Confirmez votre mot de passe</string>

</resources>