<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"


    tools:context=".LoginActivity">

    <EditText
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:hint="@string/username" />

    <EditText
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/password_confirm"
        android:hint="@string/confirmez_votre_mot_de_pass"
        android:visibility="gone" />
    <Button
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/connection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#536DFE"
        android:text="Connexion" />
    <Button
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#536DFE"
        android:text="Valider"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_btn"
            android:backgroundTint="@color/white"
            android:id="@+id/forgot_password_button"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swich_signup_button"
            android:text="@string/create_account_btn"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

    </LinearLayout>


</LinearLayout>